# WebXR-Emscripten

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  shaderbuilder.cpp  shaderbuilder.h  shell_minimal.html  webxrexample.cpp  webxrexample.h
shaders/: fragvertex.glsl  vertvertex.glsl
